--- a/configure.in
+++ b/configure.in
@@ -6,12 +6,7 @@ AC_PROG_INSTALL
 AC_AIX
 AC_MINIX
 AC_ISC_POSIX
-AC_USG
-AC_REPLACE_FUNCS(memcpy)
-AC_UNISTD_H
-AC_DIR_HEADER
-if test -z "$dirheader"; then
-  AC_DEFINE(NODIR)
-fi
-AC_XENIX_DIR
+AC_REPLACE_FUNCS(memcpy memmove)
+AC_CHECK_HEADERS(unistd.h)
+AC_HEADER_DIRENT
 AC_OUTPUT(makefile)
