--- a/configure.in
+++ b/configure.in
@@ -2,6 +2,7 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(indent.c)
 AC_PROG_CC
 AC_PROG_CPP
+AC_PROG_AWK
 AC_PROG_INSTALL
 AC_AIX
 AC_MINIX
