snapshot of project "my-indent", label t20101004

--- a/configure.in
+++ b/configure.in
@@ -1,13 +1,52 @@
+dnl $Id: configure.in,v 1.4 2010/10/05 00:54:57 tom Exp $
 dnl Process this file with autoconf to produce a configure script.
+dnl ---------------------------------------------------------------------------
+dnl Copyright:  2010 by Thomas E. Dickey
+dnl
+dnl Permission is hereby granted, free of charge, to any person obtaining a
+dnl copy of this software and associated documentation files (the
+dnl "Software"), to deal in the Software without restriction, including
+dnl without limitation the rights to use, copy, modify, merge, publish,
+dnl distribute, distribute with modifications, sublicense, and/or sell
+dnl copies of the Software, and to permit persons to whom the Software is
+dnl furnished to do so, subject to the following conditions:
+dnl  
+dnl The above copyright notice and this permission notice shall be included
+dnl in all copies or portions of the Software.
+dnl  
+dnl THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
+dnl OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+dnl MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+dnl IN NO EVENT SHALL THE ABOVE COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+dnl DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR
+dnl OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR
+dnl THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+dnl  
+dnl Except as contained in this notice, the name(s) of the above copyright
+dnl holders shall not be used in advertising or otherwise to promote the
+dnl sale, use or other dealings in this Software without prior written
+dnl authorization.
 AC_INIT(indent.c)
+
+AC_ARG_PROGRAM
+
 AC_PROG_CC
+CF_INTEL_COMPILER
+CF_PROG_EXT
+
 AC_PROG_CPP
 AC_PROG_AWK
 AC_PROG_INSTALL
-AC_AIX
-AC_MINIX
-AC_ISC_POSIX
+CF_MAKE_TAGS
+
+CF_DISABLE_ECHO
+CF_WITH_WARNINGS
+
+CF_XOPEN_SOURCE
+
 AC_REPLACE_FUNCS(memcpy memmove)
+
 AC_CHECK_HEADERS(unistd.h)
 AC_HEADER_DIRENT
+
 AC_OUTPUT(makefile)
