--- a/makefile.in
+++ b/makefile.in
@@ -1,5 +1,5 @@
 # Makefile template for GNU indent
-# $Id: makefile.in,v 1.11 2010/10/05 23:45:12 tom Exp $
+# $Id: makefile.in,v 1.13 2010/10/06 21:46:42 tom Exp $
 # Copyright (C) 1994, Joseph Arceneaux.  All rights reserved
 # Copyright (C) 1992, Free Software Foundation, Inc.
 #
@@ -119,6 +119,9 @@ memcpy.o: memcpy.c indent.h sys.h makefile
 gperf.c : indent.gperf
 	gperf -LANSI-C -C -c -p -t -T -g -j1 -o -K rwd -N is_reserved indent.gperf  >$@
 
+indent.1 : indent.1.in indent.info
+	perl make-man.pl indent.info >$@
+
 # Build tag tables
 tags: $(SRC) $(HEADERS)
 	${CTAGS} ${SRC} ${HEADERS}
@@ -148,7 +151,7 @@ install:: $(BINDIR) $(PROG)
 	${INSTALL_PROGRAM} $(PROG) $(BINDIR)/$(actual_PROG)
 
 install:: $(INFODIR)
-	${INSTALL_DATA} ${srcdir}/indent.info $(INFODIR)/indent.info
+	${INSTALL_DATA} ${srcdir}/indent.info $(INFODIR)/$(actual_PROG).info
 
 $(BINDIR) \
 $(INFODIR) :
@@ -156,7 +159,7 @@ $(INFODIR) :
 
 uninstall:
 	rm -f $(BINDIR)/$(actual_PROG)
-	rm -f $(INFODIR)/indent.info
+	rm -f $(INFODIR)/$(actual_PROG).info
 
 # Cleaning up
 #
