--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
-dnl $Id: configure.in,v 1.4 2010/10/05 00:54:57 tom Exp $
+dnl $Id: configure.in,v 1.5 2010/10/28 10:46:37 tom Exp $
 dnl Process this file with autoconf to produce a configure script.
 dnl ---------------------------------------------------------------------------
-dnl Copyright:  2010 by Thomas E. Dickey
+dnl Copyright:  1999-2002,2010 by Thomas E. Dickey
 dnl
 dnl Permission is hereby granted, free of charge, to any person obtaining a
 dnl copy of this software and associated documentation files (the
