--- a/makefile.in
+++ b/makefile.in
@@ -1,5 +1,5 @@
 # Makefile template for GNU indent
-# $Id: makefile.in,v 1.24 2010/10/28 10:52:44 tom Exp $
+# $Id: makefile.in,v 1.25 2010/10/31 14:16:04 tom Exp $
 # Copyright 1999-2002,2010, Thomas E. Dickey
 # Copyright (C) 1994, Joseph Arceneaux.  All rights reserved
 # Copyright (C) 1992, Free Software Foundation, Inc.
@@ -207,7 +207,7 @@ uninstall-scripts ::
 clean: mostlyclean
 	-rm -f core*
 	-rm -f ${MANJUNK}
-	-rm -f case0*.c case0*.err
+	-rm -f case0*.[chyl] case0*.err
 
 # Delete all files created by configuring or building indent
 distclean: clean
