snapshot of project "my-indent", label t20181226

--- a/package/debian/control
+++ b/package/debian/control
@@ -4,16 +4,17 @@ Section: utils
 Priority: optional
 Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 5)
-Homepage: http://invisible-island.net/gnu-patches/
+Homepage: https://invisible-island.net/gnu-patches/
 
 Package: cindent
 Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: pattern scanning and text processing language
  The `indent' program changes the appearance of a C program by
  inserting or deleting whitespace.
  .
  This is a stable version of indent, used in most programs at
-     http://invisible-island.net/
+     https://invisible-island.net/
  .
  It has some feature enhancements required by those programs,
  not found in other versions of indent.
