--- a/package/debian/control
+++ b/package/debian/control
@@ -4,7 +4,7 @@ Section: utils
 Priority: optional
 Standards-Version: 3.8.4
 Build-Depends: debhelper (>= 5)
-Homepage: https://invisible-island.net/gnu-patches/
+Homepage: https://invisible-island.net/cindent/
 
 Package: cindent
 Architecture: any
