--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
-dnl $Id: configure.in,v 1.13 2022/10/02 17:54:26 tom Exp $
+dnl $Id: configure.in,v 1.14 2023/02/05 14:40:26 tom Exp $
 dnl Process this file with autoconf to produce a configure script.
 dnl ---------------------------------------------------------------------------
-dnl Copyright:  1999-2020,2022 by Thomas E. Dickey
+dnl Copyright:  1999-2022,2023 by Thomas E. Dickey
 dnl
 dnl Permission is hereby granted, free of charge, to any person obtaining a
 dnl copy of this software and associated documentation files (the
@@ -49,10 +49,10 @@ CF_DISABLE_ECHO
 CF_ENABLE_WARNINGS
 
 CF_XOPEN_SOURCE
+AC_CHECK_DECL(exit)
 
 AC_REPLACE_FUNCS(memcpy memmove)
 
-AC_CHECK_HEADERS(unistd.h)
 AC_HEADER_DIRENT
 
 AC_OUTPUT(makefile)
